# python-bibliocommons

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build-helper-image.yaml  publish-release-to-pypi.yaml  publish.yaml
ci/: gen.py
src/bibliocommons/: __init__.py
tests/: __init__.py  test_client.py
