[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.7.19,<0.8.0"]

[project]
name = "bibliocommons"
version = "2025.1"
description = "Python client library to interface with BiblioCommons library systems"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "cssselect",
    "httpx",
    "lxml",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/python-bibliocommons"
"Changes" = "https://github.com/williamjacksn/python-bibliocommons/releases"
"Issues" = "https://github.com/williamjacksn/python-bibliocommons/issues"
