[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.15,<0.9.0"]

[project]
name = "bibliocommons"
version = "2025.2"
description = "Python client library to interface with BiblioCommons library systems"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "cssselect>=1.3.0",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/python-bibliocommons"
"Changes" = "https://github.com/williamjacksn/python-bibliocommons/releases"
"Issues" = "https://github.com/williamjacksn/python-bibliocommons/issues"

[dependency-groups]
dev = [
    "uv-build>=0.8.15",
]
