[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.9.13,<0.10.0"]

[project]
name = "bibliocommons"
version = "2025.3"
description = "Python client library to interface with BiblioCommons library systems"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "cssselect>=1.3.0",
    "httpx>=0.28.1",
    "lxml>=6.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/python-bibliocommons"
"Changes" = "https://github.com/williamjacksn/python-bibliocommons/releases"
"Issues" = "https://github.com/williamjacksn/python-bibliocommons/issues"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "uv-build>=0.9.13",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
